# mnapp

./: .gitignore  COPYING  README.md  configure.ac  do-it  setup-env
port/: Makefile.in  distinfo  pkg-descr
src/: Makefile.am  Makefile.freebsd  bytestream_ssl_helper.c  bytestream_ssl_helper.h  daemonize.c  diag.txt  foo.c  local_server.c  mnapp.h  mnapp_private.h  mncommand.c  mncommand.h  mnhttp.c  mnhttp.h  mnhttpc.c  mnhttpc.h  mntcps.h  mrk_daemonize.c  mrk_local_server.c  mrkapp.h  mrkapp_private.h  mrkhttp.c  mrkhttp.h
src/test/: Makefile.am  testdaemonize.c  testfasthash.c
test/: Makefile.am  testdaemonize.c  testfoo.c  testhttp.c  testhttpuri.c  testmnhttpc.c  unittest.h
